--- a/TwentyOneTogether/TwentyOneTogether/TwentyOneTogether.csproj
+++ b/TwentyOneTogether/TwentyOneTogether/TwentyOneTogether.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Card.cs" />
     <Compile Include="Dealer.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Player.cs" />
@@ -50,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TwentyOneDealer.cs" />
     <Compile Include="TwentyOneGame.cs" />
+    <Compile Include="TwentyOneRules.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
